hphp/hack/test/typecheck/defined/superglobals.php
<?hh

function f(): void {
  echo $_SERVER['a'];
}
